syntax = "proto3";
package identity.v1;
option csharp_namespace = "Identity.Api.V1";

import "google/protobuf/empty.proto";

service Accounts {
  rpc Create (Account)   returns (google.protobuf.Empty);
  rpc Read   (AccountId) returns (Account);
  rpc Update (Account)   returns (google.protobuf.Empty);
  rpc Delete (AccountId) returns (google.protobuf.Empty);
}

message AccountId {
  string uuid = 1;
}

message Account {
  AccountId id = 1;
  string name = 2;
  string email = 3;
}
